修改mybatis生成的包名

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>1.5.15.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yuhongyu</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.customer</groupId>
+    <artifactId>customer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
