--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -5,9 +5,27 @@ spring:
     name: demo
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.2.88:3306/db1?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://192.168.2.88:3306/test_db?useUnicode=true&characterEncoding=utf8
     name:
     username: root
     password: 123456
 server:
   port: 10070
+
+logging:
+  file: ${user.home}/logs/costomer
+  level: info
+mybatis-plus:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.customer.**
+  #扫描父类作为对象
+  type-aliases-super-type: java.lang.Object
+  #检查xml是否存在
+  check-config-location: true
+  global-config:
+    #自动刷新配置文件
+    refresh: true
+    #缓存sql
+    sql-parser-cache: true
+    db-config:
+      db-type: mysql
